Correcciones de estilos y font-awesome
Te actualicé la referencia a Font-awesome, tenías una versión muy antigua, te puse la "standard" que es la 4.7.

Saludos.

--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -498,3 +498,18 @@ nav .mbr-section-btn {
 	top: 0;
 	left: -2400px;
 }
+
+
+
+/*Estilos personales*/
+.navbar-buttons .display-4:hover > .mbri-hearth{
+color:red;
+}
+
+.social-list a .mbr-iconfont:hover{
+  -webkit-transition: color 2s, font-size 2s;
+  -moz-transition: color 2s, font-size 2s;
+    -o-transition: color 2s, font-size 2s;
+       transition: color 2s, font-size 2s;
+       font-size: 60px;
+}
